syntax = "proto3";

import "google/protobuf/empty.proto";

package proto.server;

option go_package = "proto/server";

message SignUpUserRequest {
    string login = 1;
    string password = 2;
    string error = 3;
}

message SignUpUserResponse {
    string userID = 1;
    string error = 2;
}

service Gokeeper {
    rpc SignUpUser(SignUpUserRequest) returns (SignUpUserResponse);
}